src/main/resources/sunlite/grammar.txt
program        → declaration* EOF ;

// DECLARATIONS

declaration    → classDecl
               | annotationDecl
               | interfaceDecl
               | enumDecl
               | enumValueDecl
               | funDecl
               | varDecl
               | statement ;

annotationDecl → annotation ( funDecl | annotationDecl ) ;
classDecl      → ( classModifier* )? "class" ( typeParam )? IDENTIFIER ( "extends" IDENTIFIER )? ( "implements" IDENTIFIER )?
                 "{" varDecl* method* initializer* ( staticInit )? "}" ;
interfaceDecl  → "interface" ( typeParam )? IDENTIFIER ( "implements" IDENTIFIER ( "," IDENTIFIER )* )?
                 "{" abstractMethod* "}" ;
funDecl        → "func" ( typeParam )? ( IDENTIFIER "." )? function ;
varDecl        → ( "static" )? ( "var" | "val" ) IDENTIFIER ( ":" type )? ( "=" expression )?  ";" ;
enumDecl       → "enum" IDENTIFIER "{" ( enumValueDecl ( "," enumValueDecl )* )? ";" varDecl* method* initializer* ( staticInit )? "}" ;
enumValueDecl  → IDENTIFIER ( "(" parameters? ")" )? ;

// STATEMENTS

statement      → exprStmt
               | forStmt
               | foreachStmt
               | matchStmt
               | ifStmt
               | returnStmt
               | whileStmt
               | breakStmt
               | continueStmt
               | importStmt
               | includeStmt
               | tryCatchStmt
               | superInitStmt
               | block ;

exprStmt       → expression ";" ;
forStmt        → "for" "(" ( varDecl | exprStmt | ";" )
                           expression? ";"
                           expression? ")" statement ;
foreachStmt    → "foreach" "(" "var" IDENTIFIER (":" type)? "in" expression ")" statement ;
matchStmt      → "match" "(" IDENTIFIER ")" "{" ( caseClause )* "}" ;
ifStmt         → "if" "(" expression ")" statement
                 ( "else" statement )? ;
returnStmt     → "return" expression? ";" ;
whileStmt      → "while" "(" expression ")" statement ;
block          → "{" declaration* "}" ;
continueStmt   → "continue;" ;
breakStmt      → "break;" ;
includeStmt    → "include" ( "<" )? STRING ( ">" )? ";" ;
importStmt     → "import" IDENTIFIER "from" STRING ( "as" IDENTIFIER )? ";" ;
tryCatchStmt   → "try" block "catch" "(" IDENTIFIER ")" block ;
throwStmt      → "throw" expression ";" ;
superInitStmt  → "super" "(" ( typeParam* )? arguments? ")" ";" ;

// EXPRESSIONS

expression     → assignment ;

assignment     → ( call "." )? IDENTIFIER ( "[" expression "]" )? "=" assignment | elvis ;
elvis          → logicOr ( "?:" logicOr ) ;
logicOr        → logicAnd ( "or" logicAnd )* ;
logicAnd       → check ( "and" check )* ;
check          → cast ( "is" | "isnt" ) cast ;
cast           → equality ( "as" ) equality ;
equality       → comparison ( ( "!=" | "==" ) comparison )* ;
comparison     → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" | "%" ) unary )* ;
unary          → ( "!" | "-" ) unary | lambda ;
lambda         → ( "func" ( typeParam )? "(" parameters? ")" ( ":" type )? block ) | call ;
call           → primary ( "(" ( typeParam* )? arguments? ")" | "." IDENTIFIER )* ;
primary        → "true" | "false" | "nil" | "this"
               | NUMBER | STRING | IDENTIFIER | arrayLiteral | tupleLiteral | "(" expression ")" | ifExpr |
               | "super" "." IDENTIFIER ;
ifExpr         → "if" "(" expression ")" expression "else" expression
arrayLiteral   → "[" ( typeParam )? ( expression ( "," expression )* )? "]"
tupleLiteral   → "(" ( expression ( "," expression )* )? ")"

// UTILITY

method         → ( annotation* )? ( funcModifier* )? "func" ( typeParam )? methodSignature block? ;
abstractMethod → ( "native" )? "func" ( typeParam )? methodSignature ;
methodSignature→ IDENTIFIER "(" parameters? ")" ( ":" type )? ;
initializer    → "init" "(" parameters? ")" block? ;
staticInit     → "static" "init" block ;
function       → IDENTIFIER "(" parameters? ")" ( ":" type )? block ;
parameters     → IDENTIFIER ( ":" type )? ( "," IDENTIFIER ( ":" type )? )* ;
arguments      → expression ( "," expression )* ;
caseClause     → (expression | "else") ":" "{" statement "}" ;
annotation     → "@" IDENTIFIER ;
type           → ( "Any"
                 | "Nil"
                 | "Byte"
                 | "Short"
                 | "Int"
                 | "Long"
                 | "Float"
                 | "Double"
                 | "Boolean"
                 | "String"
                 | "Function" ( typeParam )?
                 | "Class" ( typeParam )?
                 | "Array" ( typeParam )?
                 | "Table" ( typeParam )?
                 | "Generic" ( typeParam )?
                 | IDENTIFIER ( typeParam )?
                 ( "|" type* )? ( "?" )? ) ;
typeParam      → "<" type ( ( "," type )* )? ">" ;
funcModifier   → ( "static" | "native" | "required" | "operator" | "override" | "abstract" )
classModifier  → ( "abstract" )

// LEXICAL

NUMBER         → DIGIT+ ( "." DIGIT+ )? ;
STRING         → "\"" <any char except "\"">* "\"" ;
IDENTIFIER     → ALPHA ( ALPHA | DIGIT )* ;
ALPHA          → "a" ... "z" | "A" ... "Z" | "_" ;
DIGIT          → "0" ... "9" ;
