src/main/kotlin/sunsetsatellite/sunlite/lang/Parser.kt
package sunsetsatellite.sunlite.lang

import sunsetsatellite.sunlite.lang.Expr.*
import sunsetsatellite.sunlite.lang.Expr.Set
import sunsetsatellite.sunlite.lang.TokenType.*
import java.io.IOException


class Parser(
    val tokens: List<Token>,
    val sunlite: Sunlite,
    val allowIncluding: Boolean = false,
    val including: Boolean = false,
    val includingDepth: Int = 0,
    val importing: String = "",
    val subparser: Boolean = false
) {
    private var current = 0

    var currentPackage: String = "default"
    var currentFile: String? = null
    var currentClass: Token? = null
    var currentFunction: Token? = null
    var currentBlockDepth: Int = 0
    var lambdaAmount = 0
    var parsingConstructor: Boolean = false

    val annotations: MutableList<Stmt.Annotation> = mutableListOf()

    private class ParseError : RuntimeException()

    fun parse(path: String?): List<Stmt> {
        currentFile = path
        val statements: MutableList<Stmt> = ArrayList()

        /*if(!isAtEnd()){
            module()?.let {
                if(it is Stmt.VirtualStmt){
                    statements.addAll(it.decompose())
                } else {
                    statements.add(it)
                }
            }
        }*/

        if(sunlite.autoImported.values.none { it == path }){
            sunlite.autoImported.forEach { (name, path) ->
                doImport(
	                location = Token(STRING, "\"$path\"", path, -1, currentFile, Token.Position(-1,-1)),
	                what = Token.identifier(name, -1, currentFile),
	                keyword = Token.unknown(),
	                alias = null
                )
            }
        }

        while (!isAtEnd()) {
            module()?.let {
                if(it is Stmt.VirtualStmt){
                    statements.addAll(it.decompose())
                } else {
                    statements.add(it)
                }
            }
        }

        return statements
    }

    private fun module(): Stmt? {
        try {
            return when {
                //match(module) -> packageDeclaration()
                else -> annotation()
            }
        } catch (error: ParseError) {
            synchronize()
            return null
        }
    }

    private fun annotation(): Stmt? {
        try {
            return when {
                match(AT) -> annotationDeclaration()
                else -> declaration()
            }
        } catch (error: ParseError) {
            synchronize()
            return null
        }
    }

    private fun allowedToParse(): Boolean = (importing.isEmpty() || importing.isNotEmpty() && importing == currentClass?.lexeme) || currentClass != null

    private fun declaration(): Stmt? {
        return when {
            match(INCLUDE) -> includeStatement()
            match(IMPORT) -> importStatement()
            match(VAR) -> {
                if(match(LEFT_PAREN)){
                    val decl = destructDeclaration()
                    if(allowedToParse()) decl else null
                } else {
                    val decl = varDeclaration()
                    if(allowedToParse()) decl else null
                }
            }
            match(VAL) -> {
                if(match(LEFT_PAREN)){
                    val decl = destructDeclaration(FieldModifier.CONST)
                    if(allowedToParse()) decl else null
                } else {
                    val decl = varDeclaration(FieldModifier.CONST)
                    if (allowedToParse()) decl else null
                }
            }
            match(STATIC) -> {
                val modifier = previous()
                consume(FUN, "Expected 'func' after 'static' modifier.")
                val decl = function(FunctionType.FUNCTION, modifier)
                if(allowedToParse()) decl else null
            }
            match(FUN) -> {
                val decl = function(FunctionType.FUNCTION, null)
                if(allowedToParse()) decl else null
            }
            match(ABSTRACT) -> {
                consume(CLASS, "Expected 'class' after class modifier.")
                classDeclaration(ClassModifier.ABSTRACT)
            }
            match(CLASS) -> classDeclaration(ClassModifier.NORMAL)
            match(ENUM) -> enumDeclaration()
            match(INTERFACE) -> interfaceDeclaration()
            else -> {
                val stmt = statement()
                if(allowedToParse()) stmt else null
            }
        }
    }

    private fun statement(): Stmt {
        return when {
            match(THROW) -> throwStatement()
            match(LEFT_BRACE) -> Stmt.Block(block(), previous().line, previous().file)
            match(IF) -> ifStatement()
            match(WHILE) -> whileStatement()
            match(MATCH) -> matchStatement()
            match(FOR) -> forStatement()
            match(FOREACH) -> foreachStatement()
            match(BREAK) -> breakStatement()
            match(CONTINUE) -> continueStatement()
            match(RETURN) -> returnStatement()
            match(TRY) -> tryCatchStatement()
            match(SUPER) -> superInitStatement()
            else -> expressionStatement()
        }
    }

    /*private fun packageDeclaration(): Stmt {
        val keyword = previous()
        var what: Token
        what = consume(STRING, "Expected package name.")
        consume(SEMICOLON, "Expected ';' after package statement.")
        currentPackage = what.literal as String
        return Stmt.Package(keyword, what)
    }*/

    private fun importStatement(): Stmt? {
        val keyword = previous()
        val what = consume(IDENTIFIER, "Expected class name.")
        consume(FROM, "Expected 'from' after class name of import statement.")
        val location: Token = consume(STRING, "Expected import location string.")
        var alias: Token? = null
        if(match(AS)){
            alias = consume(IDENTIFIER, "Expected alias name.")
        }
        consume(SEMICOLON, "Expected ';' after import statement.")
        return doImport(location, what, keyword, alias)
    }

    private fun doImport(
        location: Token,
        what: Token,
        keyword: Token,
        alias: Token?
    ): Stmt.Import? {
        val id = (location.literal as String) + "::" + what.lexeme
        if (sunlite.imports.contains(id)) {
            /*if (sunlite.imports[id]?.second == null) {
                //sunlite.error(keyword, "ImportError: Circular import detected.")
                return Stmt.Import(keyword, what, location, alias)
            }*/
            return Stmt.Import(keyword, what, location, alias)
        }

        sunlite.imports[id] = includingDepth to null

        if (sunlite.collector == null || !allowIncluding) {
            return Stmt.Import(keyword, what, location, alias)
        }

        var data: String? = null
        val invalidPaths: MutableList<String> = mutableListOf()

        data = Sunlite::class.java.getResourceAsStream("${location.literal}.sl")?.bufferedReader()?.use { it.readText() }

        if (data == null) {
            sunlite.path.forEach {
                try {
                    data = sunlite.readFunction.apply("${it}${location.literal}.sl")
                } catch (_: IOException) {
                    invalidPaths.add(it)
                }
            }
        }

        if (data == null) {
            sunlite.imports.remove(id)
            sunlite.error(keyword, "ImportError: Couldn't find '${location.literal}' on the load path list.")
            return null
        }

        val scanner = Scanner(data, sunlite)
        val tokens: List<Token> = scanner.scanTokens(location.literal)

        var parser = Parser(tokens, sunlite, true, true, includingDepth + 1, what.lexeme)
        var statements = parser.parse(location.literal)

        // Stop if there was a syntax error.
        if (sunlite.hadError) {
            sunlite.imports.remove(id)
            //sunlite.error(keyword, "ImportError: SyntaxError in file being imported.")
            return null
        }

        sunlite.collector?.collect(statements, location.literal, sunlite.compileStep)

        // Stop if there was a type collection error.
        if (sunlite.hadError) {
            sunlite.imports.remove(id)
            //sunlite.error(keyword, "ImportError: TypeError in file being imported.")
            return null
        }

        parser = Parser(tokens, sunlite, true, true, includingDepth + 1, what.lexeme)
        statements = parser.parse(location.literal)

        // Stop if there was a syntax error.
        if (sunlite.hadError) {
            sunlite.imports.remove(id)
            //sunlite.error(keyword, "ImportError: SyntaxError in file being imported.")
            return null
        }

        sunlite.collector?.collect(statements, location.literal, sunlite.compileStep + 2)

        if(sunlite.compileStep > 0){
            val checker = TypeChecker(sunlite, null)
            checker.check(statements)
        }

        // Stop if there was a type error.
        if (sunlite.hadError) {
            sunlite.imports.remove(id)
            //sunlite.error(keyword, "ImportError: TypeError in file being imported.")
            return null
        }

        sunlite.imports[id] = includingDepth to statements

        if (Sunlite.showOtherAST) {
            sunlite.printInfo("AST: ${location.literal}")
            sunlite.printInfo("-----")
            statements.forEach {
                sunlite.printInfo(AstPrinter.print(it))
            }
            sunlite.printInfo("-----")
            sunlite.printInfo()
        }

        if (Sunlite.debug && sunlite.compileStep == 0) {
            sunlite.printInfo("Parsed and imported ${what.lexeme} from ${location.literal}.")
            //sunlite.printInfo()
        }
        return Stmt.Import(keyword, what, location, alias)
    }

    private fun includeStatement(): Stmt? {
        val keyword = previous()
        var builtin: Boolean = false
        var what: Token
        if(match(LESS)){
            what = consume(STRING, "Expected builtin include location string.")
            consume(GREATER, "Expected '>' after include statement.")
            builtin = true
        } else {
            what = consume(STRING, "Expected include location string.")
        }
        consume(SEMICOLON, "Expected ';' after include statement.")

        if (sunlite.includes.contains(what.literal as String)) {
            return null
        }

        if (sunlite.collector == null || !allowIncluding) {
            return null
        }

        var data: String? = null
        val invalidPaths: MutableList<String> = mutableListOf()

        if(!builtin){
            sunlite.path.forEach {
                try {
                    data = sunlite.readFunction.apply(it + what.literal + ".sl`")
                } catch (_: IOException) {
                    invalidPaths.add(it)
                }
            }
        } else {
            data = Sunlite::class.java.getResourceAsStream(what.literal + ".sl")?.bufferedReader()?.use { it.readText() }
        }


        if (data == null) {
            sunlite.error(keyword, "ImportError: Couldn't find '${what.literal}' on the load path list.")
            return null
        }

        val scanner = Scanner(data, sunlite)
        val tokens: List<Token> = scanner.scanTokens(what.literal)

        var parser = Parser(tokens, sunlite, true, true, includingDepth + 1)
        var statements = parser.parse(what.literal)

        // Stop if there was a syntax error.
        if (sunlite.hadError) {
            sunlite.error(keyword, "ImportError: SyntaxError in file being imported.")
            return null
        }

        sunlite.collector?.collect(statements, what.literal, sunlite.compileStep)

        // Stop if there was a type collection error.
        if (sunlite.hadError) {
            sunlite.error(keyword, "ImportError: TypeError in file being imported.")
            return null
        }

        parser = Parser(tokens, sunlite, false, true, includingDepth + 1)
        statements = parser.parse(what.literal)

        // Stop if there was a syntax error.
        if (sunlite.hadError) {
            sunlite.error(keyword, "ImportError: SyntaxError in file being imported.")
            return null
        }

        val checker = TypeChecker(sunlite, null)
        checker.check(statements)

        // Stop if there was a type error.
        if (sunlite.hadError) {
            sunlite.error(keyword, "ImportError: TypeError in file being imported.")
            return null
        }

        sunlite.includes[what.literal] = includingDepth to statements

        /*if (Sunlite.showAST) {
            sunlite.printInfo("AST: ${currentFile}")
            sunlite.printInfo("-----")
            statements.forEach {
                sunlite.printInfo(AstPrinter.print(it))
            }
            sunlite.printInfo("-----")
            sunlite.printInfo()
        }*/

        if (Sunlite.debug) {
            sunlite.printInfo("Parsed and included '${what.literal}'.")
        }

        return Stmt.Include(keyword, what)
    }

    private fun classDeclaration(modifier: ClassModifier): Stmt? {
        //if(modifier == ClassModifier.DYNAMIC) consume(CLASS, "Expected 'class' after class modifier.")

        val typeParameters: MutableList<Param> = ArrayList()
        if (match(LESS)) {
			do {
				if (typeParameters.size >= 255) {
					error(peek(), "Can't have more than 255 type parameters.")
				}

				val identifier = consume(IDENTIFIER, "Expected type parameter name.")
				typeParameters.add(Param(identifier, Type.Parameter(identifier)))
			} while (match(COMMA))
			consume(GREATER, "Expected '>' after type parameter declaration.")
        }

        val name = consume(IDENTIFIER, "Expected class name.")

        currentClass = name

        var superclass: Variable? = null
        if (match(EXTENDS)) {
            consume(IDENTIFIER, "Expected superclass name.")
            superclass = Variable(previous())
        }
        if(superclass == null && name.lexeme != "Object"){
            superclass = Variable(Token.identifier("Object", previous()))
        }

        val superinterfaces: MutableList<Pair<Variable,List<Type>>> = mutableListOf()
        if (match(IMPLEMENTS)) {
            do {
                if (superinterfaces.size >= 255) {
                    error(peek(), "Can't inherit more than 255 superinterfaces.")
                }

                val name = Variable(consume(IDENTIFIER, "Expected superinterface name."))
                val specifiedTypeParams: MutableList<Type> = mutableListOf()
                if (match(LESS)) {
                    do {
                        if (typeParameters.size >= 255) {
                            error(peek(), "Can't have more than 255 type parameters.")
                        }
                        val type = getType(false, true)
                        specifiedTypeParams.add(type)
                    } while (match(COMMA))
                    consume(GREATER, "Expected '>' after type parameter declaration.")
                }

                superinterfaces.add(name to specifiedTypeParams)

            } while (match(COMMA))
        }

        consume(LEFT_BRACE, "Expected '{' before class body.")

        sunlite.collector?.let { collector ->
            for (superinterface in superinterfaces) {
                val prototype = collector.typeHierarchy[superinterface.first.name.lexeme]

                prototype?.let { p ->
                    typeParameters.addAll(p.typeParameters.mapIndexed { index, it ->
                        val identifier = Token.identifier(it, superinterface.first)
                        Param(identifier, superinterface.second.getOrElse(index, { Type.Parameter(identifier) }))
                    })
                }
            }
        }

        if(importing.isEmpty() || (importing.isNotEmpty() && name.lexeme == importing)){
            val types = sunlite.collector?.typeHierarchy
            if(types?.containsKey(name.lexeme) == false || (types?.containsKey(name.lexeme) == true && types[name.lexeme]?.incomplete == true)){
	            types[name.lexeme] = TypeCollector.TypePrototype(
                    name.lexeme,
                    superclass?.name?.lexeme ?: "<nil>",
                    superinterfaces.map { it.first.name.lexeme },
                    typeParameters.map { it.token.lexeme },
                    modifier,
                    null,
		            incomplete = true,
		            isInterface = false,
		            id = sunlite.compileStep
                )
            }
        }


        val methods: MutableList<Stmt.Function> = ArrayList()
        val fields: MutableList<Stmt.Var> = ArrayList()
        var staticInit: Stmt.Block? = null
        while (!checkToken(RIGHT_BRACE) && !isAtEnd()) {
            val currentModifier = peek()
            when {
                match(OPERATOR) -> {
                    when {
                        match(FUN) -> {
                            methods.add(function(FunctionType.METHOD, currentModifier))
                        }
                    }
                }

                checkToken(OVERRIDE) && checkNext(REQUIRED) -> {
                    val modifier = peek()
                    val modifier2 = next()
                    advance()
                    advance()
                    when {
                        match(FUN) -> {
                            methods.add(function(FunctionType.METHOD, modifier, modifier2))
                        }
                    }
                }

                match(ABSTRACT) -> {
                    methods.add(abstractMethod())
                }

                match(OVERRIDE) -> {
                    when {
                        match(FUN) -> {
                            methods.add(function(FunctionType.METHOD, currentModifier))
                        }
                    }
                }

                match(REQUIRED) -> {
                    when {
                        match(FUN) -> {
                            methods.add(function(FunctionType.METHOD, currentModifier))
                        }
                    }
                }

                checkToken(STATIC) && checkNext(NATIVE) -> {
                    val modifier = peek()
                    val modifier2 = next()
                    advance()
                    advance()
                    when {
                        match(FUN) -> {
                            methods.add(function(FunctionType.METHOD, modifier, modifier2))
                        }
                    }
                }

                match(STATIC) || match(NATIVE) -> {
                    if (previous().type == STATIC) {
                        when {
                            match(VAR) -> {
                                fields.add(varDeclaration(FieldModifier.STATIC))
                            }

                            match(VAL) -> {
                                fields.add(varDeclaration(FieldModifier.STATIC_CONST))
                            }

                            match(FUN) -> {
                                methods.add(function(FunctionType.METHOD, currentModifier))
                            }

                            match(INIT) -> {
                                consume(LEFT_BRACE, "Expected '{' before static initializer body.")
                                staticInit = Stmt.Block(block(), previous().line, previous().file)
                            }

                            else -> {
                                throw error(peek(), "Expected a field or method declaration.")
                            }
                        }
                    } else if (match(FUN)) {
                        //throw error(peek(), "Expected 'static' before native method declaration.")
                        methods.add(function(FunctionType.METHOD, currentModifier))
                    } else {
                        throw error(peek(), "Expected a field or method declaration.")
                    }
                }

                match(VAR) -> {
                    fields.add(varDeclaration())
                }

                match(VAL) -> {
                    fields.add(varDeclaration(FieldModifier.CONST))
                }

                match(FUN) -> {
                    methods.add(function(FunctionType.METHOD, null))
                }

                match(INIT) -> {
                    methods.add(function(FunctionType.INITIALIZER, null))
                }

                match(AT) -> {
                    annotationDeclaration()
                }

                else -> {
                    throw error(peek(), "Expected a field or method declaration.")
                }
            }
        }

        consume(RIGHT_BRACE, "Expected '}' after class body.")

        currentClass = null

        if(importing.isNotEmpty() && name.lexeme != importing) return null

        return Stmt.Class(name, methods, fields, superclass, superinterfaces.map { it.first }, modifier, typeParameters, staticInit)
    }

    private fun superInitStatement(): Stmt {
        current--
        val expr = call()
        consume(SEMICOLON, "Expected ';' after super constructor call.")
        if(expr is Call){
            val desc = "init"+Type.ofFunction("init", Type.NIL, expr.arguments.map { Param((it as NamedExpr).getNameToken(), it.getExprType()) }).getDescriptor()
            (expr.callee as Super).method = Token.identifier(desc, expr.callee.getNameToken())
            return Stmt.SuperInit(expr)
        }
        throw error(peek(), "Expected '(' after 'super' in super constructor call.")
    }

    private fun enumDeclaration(): Stmt? {
        val name = consume(IDENTIFIER, "Expected enum name.")

        currentClass = name

        val superclass = Variable(Token.identifier("Enum", previous()))

        consume(LEFT_BRACE, "Expected '{' before enum body.")

        if(importing.isEmpty() || (importing.isNotEmpty() && name.lexeme == importing)){
            val types = sunlite.collector?.typeHierarchy
            if(types?.containsKey(name.lexeme) == false || (types?.containsKey(name.lexeme) == true && types[name.lexeme]?.incomplete == true)){
                types[name.lexeme] = TypeCollector.TypePrototype(
                    name.lexeme,
	                superclass.name.lexeme,
                    listOf(),
                    listOf(),
                    ClassModifier.SEALED,
                    null,
	                incomplete = true,
	                isInterface = false,
	                id = sunlite.compileStep
                )
            }
        }

        val methods: MutableList<Stmt.Function> = ArrayList()
        val fields: MutableList<Stmt.Var> = ArrayList()
        var staticInit: Stmt.Block? = null

        if(checkToken(IDENTIFIER)){
            do {
                val valueName = peek()
                advance()
                val enumType = Type.ofObject(name.lexeme)
                val enumClass = Variable(name, enumType, true)
	            val initializer: Call =
                    if(checkToken(LEFT_PAREN)){
                        advance()
                        finishCall(enumClass, listOf()) as Call
                    } else {
                        Call(enumClass, valueName, listOf(), listOf())
                    }
                fields.add(Stmt.Var(valueName, enumType, initializer, FieldModifier.STATIC_CONST))
            } while (match(COMMA))
            consume(SEMICOLON, "Expected ';' after enum values declaration.")
        }

        while (!checkToken(RIGHT_BRACE) && !isAtEnd()) {
            val currentModifier = peek()
            when {
                match(OPERATOR) -> {
                    when {
                        match(FUN) -> {
                            methods.add(function(FunctionType.METHOD, currentModifier))
                        }
                    }
                }

                checkToken(OVERRIDE) && checkNext(REQUIRED) -> {
                    val modifier = peek()
                    val modifier2 = next()
                    advance()
                    advance()
                    when {
                        match(FUN) -> {
                            methods.add(function(FunctionType.METHOD, modifier, modifier2))
                        }
                    }
                }

                match(ABSTRACT) -> {
                    methods.add(abstractMethod())
                }

                match(OVERRIDE) -> {
                    when {
                        match(FUN) -> {
                            methods.add(function(FunctionType.METHOD, currentModifier))
                        }
                    }
                }

                match(REQUIRED) -> {
                    when {
                        match(FUN) -> {
                            methods.add(function(FunctionType.METHOD, currentModifier))
                        }
                    }
                }

                checkToken(STATIC) && checkNext(NATIVE) -> {
                    val modifier = peek()
                    val modifier2 = next()
                    advance()
                    advance()
                    when {
                        match(FUN) -> {
                            methods.add(function(FunctionType.METHOD, modifier, modifier2))
                        }
                    }
                }

                match(STATIC) || match(NATIVE) -> {
                    if (previous().type == STATIC) {
                        when {
                            match(VAR) -> {
                                fields.add(varDeclaration(FieldModifier.STATIC))
                            }

                            match(VAL) -> {
                                fields.add(varDeclaration(FieldModifier.STATIC_CONST))
                            }

                            match(FUN) -> {
                                methods.add(function(FunctionType.METHOD, currentModifier))
                            }

                            match(INIT) -> {
                                consume(LEFT_BRACE, "Expected '{' before static initializer body.")
                                staticInit = Stmt.Block(block(), previous().line, previous().file)
                            }

                            else -> {
                                throw error(peek(), "Expected a field or method declaration.")
                            }
                        }
                    } else if (match(FUN)) {
                        //throw error(peek(), "Expected 'static' before native method declaration.")
                        methods.add(function(FunctionType.METHOD, currentModifier))
                    } else {
                        throw error(peek(), "Expected a field or method declaration.")
                    }
                }

                match(VAR) -> {
                    fields.add(varDeclaration())
                }

                match(VAL) -> {
                    fields.add(varDeclaration(FieldModifier.CONST))
                }

                match(FUN) -> {
                    methods.add(function(FunctionType.METHOD, null))
                }

                match(INIT) -> {
                    methods.add(function(FunctionType.INITIALIZER, null))
                }

                else -> {
                    throw error(peek(), "Expected a field or method declaration.")
                }
            }
        }

        consume(RIGHT_BRACE, "Expected '}' after enum body.")

        currentClass = null

        if(importing.isNotEmpty() && name.lexeme != importing) return null

        return Stmt.Class(name, methods, fields, superclass, listOf(), ClassModifier.SEALED, listOf(), staticInit)
    }

    private fun interfaceDeclaration(): Stmt? {

        val typeParameters: MutableList<Param> = ArrayList()
        if (match(LESS)) {
			do {
				if (typeParameters.size >= 255) {
					error(peek(), "Can't have more than 255 type parameters.")
				}

				val identifier = consume(IDENTIFIER, "Expected type parameter name.")
				typeParameters.add(Param(identifier, Type.Parameter(identifier)))
			} while (match(COMMA))
			consume(GREATER, "Expected '>' after type parameter declaration.")
        }

        val name = consume(IDENTIFIER, "Expected interface name.")

        val superinterfaces: MutableList<Variable> = mutableListOf()
        if (match(IMPLEMENTS)) {
            do {
                if (superinterfaces.size >= 255) {
                    error(peek(), "Can't inherit more than 255 superinterfaces.")
                }

                superinterfaces.add(
                    Variable(consume(IDENTIFIER, "Expected superinterface name."))
                )
            } while (match(COMMA))
        }

        consume(LEFT_BRACE, "Expected '{' before interface body.")

        if(importing.isEmpty() || (importing.isNotEmpty() && name.lexeme == importing)){
            val types = sunlite.collector?.typeHierarchy
            if(types?.containsKey(name.lexeme) == false || (types?.containsKey(name.lexeme) == true && types[name.lexeme]?.incomplete == true)){
                types[name.lexeme] = TypeCollector.TypePrototype(
                    name.lexeme,
                    "<nil>",
                    superinterfaces.map { it.name.lexeme },
                    typeParameters.map { it.token.lexeme },
                    ClassModifier.ABSTRACT,
                    null,
	                incomplete = true,
	                isInterface = false,
	                id = sunlite.compileStep
                )
            }
        }

        val methods: MutableList<Stmt.Function> = ArrayList()
        while (!checkToken(RIGHT_BRACE) && !isAtEnd()) {
            methods.add(abstractMethod())
        }

        consume(RIGHT_BRACE, "Expected '}' after interface body.")

        if(importing.isNotEmpty() && name.lexeme != importing) return null

        return Stmt.Interface(name, methods, superinterfaces, typeParameters)
    }

    data class FuncSignature(val name: Token, val parameters: List<Param>, val type: Type, val receiver: Token? = null)

    private fun funcSignature(kind: FunctionType): FuncSignature {
        var name = if (kind == FunctionType.INITIALIZER) Token.identifier("init", -1, currentFile) else consume(
            IDENTIFIER,
            "Expected ${kind.toString().lowercase()} name."
        )

        var receiver: Token? = null
        if(match(DOT)){
            if(kind != FunctionType.FUNCTION){
                throw error(peek(), "Only top level functions can be extensions.")
            }
            receiver = name
            sunlite.collector!!.typeHierarchy[receiver.lexeme]?.let {
	            if (it.isInterface) {
		            throw error(peek(), "Can't add extensions to interfaces.")
	            }
            }
            name = consume(IDENTIFIER, "Expected ${kind.toString().lowercase()} name after extension receiver.")

        }

        consume(LEFT_PAREN, "Expected '(' after ${kind.toString().lowercase()} name.")
        val parameters: MutableList<Param> = ArrayList()
        if (!checkToken(RIGHT_PAREN)) {
            do {
                if (parameters.size >= 255) {
                    error(peek(), "Can't have more than 255 parameters.")
                }

                parameters.add(
                    Param(consume(IDENTIFIER, "Expected parameter name."), getType()/*, continueIf(EQUAL){ expression() }*/)
                )
            } while (match(COMMA))
        }
        consume(RIGHT_PAREN, "Expected ')' after parameters.")

        val type = getType(function = true)

        if (kind == FunctionType.INITIALIZER) {
            val desc = "init"+Type.ofFunction("init", Type.NIL, parameters).getDescriptor()
            name = Token.identifier(desc, -1, currentFile)
            parsingConstructor = true
        }

        currentFunction = name
        return FuncSignature(name, parameters, type, receiver)
    }

    private fun abstractMethod(): Stmt.Function {
        consume(FUN, "Expected abstract method declaration")

        val typeParameters: MutableList<Param> = ArrayList()
        if (match(LESS)) {
            //throw error(peek(), "Generic functions not supported.")
			do {
				if (typeParameters.size >= 255) {
					error(peek(), "Can't have more than 255 type parameters.")
				}

				val identifier = consume(IDENTIFIER, "Expected type parameter name.")
				typeParameters.add(Param(identifier, Type.Parameter(identifier)))
			} while (match(COMMA))
			consume(GREATER, "Expected '>' after type parameter declaration.")
        }

        val signature = funcSignature(FunctionType.METHOD)
        currentFunction = null
        parsingConstructor = false

        return Stmt.Function(
            signature.name,
            FunctionType.METHOD,
            signature.parameters,
            listOf(),
            arrayOf(FunctionModifier.ABSTRACT),
            signature.type,
            typeParameters
        )
    }

    private fun function(kind: FunctionType, modifier: Token?, modifier2: Token? = null): Stmt.Function {
        if (modifier != null && FunctionModifier.entries.none { it.name.lowercase() == modifier.type.name.lowercase() }) {
            error(peek(), "Invalid ${kind.toString().lowercase()} modifier '${modifier.lexeme}'.")
        }

        val typeParameters: MutableList<Param> = ArrayList()
        if (match(LESS)) {
            //throw error(peek(), "Generic functions not supported.")
			do {
				if (typeParameters.size >= 255) {
					error(peek(), "Can't have more than 255 type parameters.")
				}

				val identifier = consume(IDENTIFIER, "Expected type parameter name.")
				typeParameters.add(Param(identifier, Type.Parameter(identifier)))
			} while (match(COMMA))
			consume(GREATER, "Expected '>' after type parameter declaration.")
        }

        val funcModifier = FunctionModifier.get(modifier, modifier2)
        val signature = funcSignature(kind)

        if(!funcModifier.contains(FunctionModifier.NORMAL) && !funcModifier.contains(FunctionModifier.STATIC) && signature.receiver != null){
            throw error(signature.receiver, "Extension ${kind.toString().lowercase()} can only have 'static' or no modifier.")
        }

        if(kind == FunctionType.FUNCTION && funcModifier.contains(FunctionModifier.STATIC) && signature.receiver == null){
            throw error(peek(), "Only extension ${kind.toString().lowercase()}s can have the 'static' modifier at top level.")
        }

        var body: List<Stmt> = listOf()
        if (!funcModifier.contains(FunctionModifier.NATIVE)) {
            consume(LEFT_BRACE, "Expected '{' before ${kind.toString().lowercase()} body.")
            body = block()
        } else {
            assert(LEFT_BRACE, "Native ${kind.toString().lowercase()} cannot have a body.")
        }

        currentFunction = null
        parsingConstructor = false

        val ann = ArrayList<Stmt.Annotation>(annotations)
        annotations.clear()
